# Authy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: auth.rs  error.rs  main.rs  models.rs  user_database.rs  user_management.rs
test/: post_wrk.lua  wrkscrpt.sh
