[package]
name = "authy"
version = "0.1.0"
edition = "2018"

[dependencies]
jsonwebtoken = "=7.2"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
arc_map = "0.1.0"
rand = "0.8.4"
rust-argon2 = "0.8"
lazy_static = "1.4.0"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]


[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
